[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
hyper-router = { version = "0.5" }
reqwest = { version = "0.11.20", features = ["blocking"] }

http-body-util = "0.1.0-rc.3"

build_html = "2.4.0"
stylist = { version = "0.11", features = [ "macros" ] }

musicbrainz_rs = "0.5.0"
urlencoding = "2.1.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
